# tcc

./: .dockerignore  .env.dist  .gitignore  .gitlab-ci.yml  .releaserc  Dockerfile  Inference_with_Table_Transformer_(TATR)_for_parsing_tables.ipynb  PRE-PROD-GIT_HISTORY  README.md  app.py  base.py  browsers.py  captcha.py  celeryconf.py  columns.py  commands.py  conf.py  config.py  count_bucket.sh  counter.py  docker-compose.yml  gerar_pdf_ilustrativo.ipynb  gerar_pdf_ilustrativo_old.ipynb  local_collect.sh  logconfig.py  main.py  models.py  mypy.ini  p.py  pag9_d.jsonoutput-1-to-1.json:Zone.Identifier  pag9_resultado.json  pdfilust.py  proxy.py  pyproject.toml  repeater.py  start-celery.sh  start-flower.sh  storage.py  tasks.py  utils.py
01_original_files/: placeholder.txt
04_joined_ocred_files/: placeholder.txt
06_output_table_files/: placeholder.txt
app/: __init__.py  celery_run.py  commands.py  conf.py  crawler_cli.py
crawlers/: requirements.txt
debug_grid_files/: placeholder.txt
deskewed_files/: placeholder.txt
extracted_pages/: deskewed_rdi184849balanco_deskewed.jsonoutput-121-to-140.json  deskewed_rdi184849balanco_deskewed.jsonoutput-161-to-180.json  deskewed_rdi184849balanco_deskewed.jsonoutput-201-to-220.json  deskewed_rdi184849balanco_deskewed.jsonoutput-21-to-40.json  deskewed_rdi184849balanco_deskewed.jsonoutput-301-to-320.json  deskewed_rdi184849balanco_deskewed.jsonoutput-81-to-100.json  pag9_d.json  pag9_resultado.json
extracted_pages_files/: placeholder.txt
jsons/: deskewed_rdi184849balanco_deskewed.jsonoutput-1-to-20.json  (+11 more)
(+190 files in other folders)
