[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
dpath = "^2.1.5"
pymupdf = "^1.22.2"
ipython = "8.12"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pyocr = "^0.8.3"
wand = "^0.6.11"
textract = "^1.6.5"
tika = "^2.6.0"
openpyxl = "^3.1.2"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
